Resolving Multiple Issues - Remember to clear your browser cache
-issue#920: Issue with scrollbars after update to 1.1.19 related to #902
-issue#921: Tree Mode no longer expands to accomodate full tree item
names
-issue#929: Overlapping frames on certain themes

--- a/include/themes/dark/main.css
+++ b/include/themes/dark/main.css
@@ -59,6 +59,10 @@ td, th {
 	margin: 0px;
 }
 
+th {
+	white-space: nowrap;
+}
+
 img {
 	border:none;
 	vertical-align:middle;
@@ -556,6 +560,7 @@ label {
 .treeArea, .treeItemsArea {
 	width:33%;
 	border:1px solid rgba(148, 179, 107, 0.8);
+	vertical-align: top;
 }
 
 .linkMarker {
