--- a/include/themes/paw/main.css
+++ b/include/themes/paw/main.css
@@ -520,6 +520,7 @@ label {
 .treeArea, .treeItemsArea {
 	width:33%;
 	border:1px solid #006400;
+	vertical-align: top;
 }
 
 .linkMarker {
@@ -646,6 +647,10 @@ label {
 
 .cactiTreeNavigationArea div:first-child {
 	padding-left: 5px;
+}
+
+.cactiTreeSearch {
+	padding-top: 5px;
 }
 
 .jstree {
